--- a/src/presence_analyzer/templates/presence_weekday.html
+++ b/src/presence_analyzer/templates/presence_weekday.html
@@ -3,7 +3,6 @@
 {% set active_page = 1 %}
 
 {% block javascript %}
-    <script src="/static/js/jquery.min.js"></script>
     <script type="text/javascript" src="https://www.google.com/jsapi"></script>
     <script type="text/javascript">
         google.load("visualization", "1", {packages:["corechart"], 'language': 'en'});
@@ -11,7 +10,7 @@
         (function($) {
             $(document).ready(function(){
                 var loading = $('#loading');
-                $.getJSON("/api/v1/users", function(result) {
+                $.getJSON("{{ url_for('users_view') }}", function(result) {
                     var dropdown = $("#user_id");
                     $.each(result, function(item) {
                         dropdown.append($("<option />").val(this.user_id).text(this.name));
@@ -25,7 +24,7 @@
                     if(selected_user) {
                         loading.show();
                         chart_div.hide();
-                        $.getJSON("/api/v1/presence_weekday/"+selected_user, function(result) {
+                        $.getJSON("{{ url_for('presence_weekday_view', user_id=0) }}"+selected_user, function(result) {
                             var data = google.visualization.arrayToDataTable(result);
                             var options = {};
                             chart_div.show();
