--- a/src/presence_analyzer/templates/mean_time_weekday.html
+++ b/src/presence_analyzer/templates/mean_time_weekday.html
@@ -1,8 +1,8 @@
-{% extends "base_template.html" %}
+<%! active_page = 2 %>
 
-{% set active_page = 2 %}
+<%inherit file="base_template.html" />
 
-{% block javascript %}
+<%block name="javascript">
     <script type="text/javascript" src="https://www.google.com/jsapi"></script>
     <script type="text/javascript">
         google.load("visualization", "1", {packages:["corechart"], 'language': 'pl'});
@@ -17,7 +17,7 @@
         (function($) {
             $(document).ready(function(){
                 var loading = $('#loading');
-                $.getJSON("{{ url_for('users_view') }}", function(result) {
+                $.getJSON("${ url_for('users_view') }", function(result) {
                     var dropdown = $("#user_id");
                     $.each(result, function(item) {
                         dropdown.append($("<option />").val(this.user_id).text(this.name));
@@ -31,7 +31,7 @@
                     if(selected_user) {
                         loading.show();
                         chart_div.hide();
-                        $.getJSON("{{ url_for('mean_time_weekday_view', user_id=0) }}"+selected_user, function(result) {
+                        $.getJSON("${ url_for('mean_time_weekday_view', user_id=0) }"+selected_user, function(result) {
                             $.each(result, function(index, value) {
                                 value[1] = parseInterval(value[1]);
                             });
@@ -56,8 +56,8 @@
             });
         })(jQuery);
     </script>
-{% endblock %}
+</%block>
 
-{% block title %}
+<%block name="title">
     Presence mean time by weekday
-{% endblock %}
+</%block>
