--- a/src/presence_analyzer/templates/page_not_found.html
+++ b/src/presence_analyzer/templates/page_not_found.html
@@ -8,9 +8,9 @@
     <meta name="author" content="STX Next sp. z o.o."/>
     <meta name="viewport" content="width=device-width; initial-scale=1.0">
     
-    <link href="{{ url_for('static', filename='/css/normalize.css') }}" media="all" rel="stylesheet" type="text/css" />
-    <link href="{{ url_for('static', filename='/css/style.css') }}" media="all" rel="stylesheet" type="text/css" />
-    <script src="{{ url_for('static', filename='/js/jquery.min.js') }}"></script>
+    <link href="${ url_for('static', filename='/css/normalize.css') }" media="all" rel="stylesheet" type="text/css" />
+    <link href="${ url_for('static', filename='/css/style.css') }" media="all" rel="stylesheet" type="text/css" />
+    <script src="${ url_for('static', filename='/js/jquery.min.js') }"></script>
 </head>
 
 <body>
