--- a/src/presence_analyzer/templates/presence_start_end.html
+++ b/src/presence_analyzer/templates/presence_start_end.html
@@ -1,8 +1,8 @@
-{% extends "base_template.html" %}
+<%! active_page = 3 %>
 
-{% set active_page = 3 %}
+<%inherit file="base_template.html" />
 
-{% block javascript %}
+<%block name="javascript">
     <script type="text/javascript" src="https://www.google.com/jsapi"></script>
     <script type="text/javascript">
         google.load("visualization", "1", {packages:["corechart", "timeline"], 'language': 'pl'});
@@ -16,7 +16,7 @@
         (function($) {
             $(document).ready(function(){
                 var loading = $('#loading');
-                $.getJSON("{{ url_for('users_view') }}", function(result) {
+                $.getJSON("${ url_for('users_view') }", function(result) {
                     var dropdown = $("#user_id");
                     $.each(result, function(item) {
                         dropdown.append($("<option />").val(this.user_id).text(this.name));
@@ -30,7 +30,7 @@
                     if(selected_user) {
                         loading.show();
                         chart_div.hide();
-                        $.getJSON("{{ url_for('presence_start_end_view', user_id=0) }}"+selected_user, function(result) {
+                        $.getJSON("${ url_for('presence_start_end_view', user_id=0) }"+selected_user, function(result) {
                             $.each(result, function(index, value) {
                                 index[1] = parseInterval(index[1]);
                                 value[1] = parseInterval(value[1]);
@@ -58,8 +58,8 @@
             });
         })(jQuery);
     </script>
-{% endblock %}
+</%block>
 
-{% block title %}
+<%block name="title">
     Presence start-end weekday
-{% endblock %}
+</%block>
