[2738] Added whole funcionalities. Data read from xml.

--- a/src/presence_analyzer/templates/base_template.html
+++ b/src/presence_analyzer/templates/base_template.html
@@ -46,6 +46,9 @@ pages = [
                 <select id="user_id" style="display: none">
                     <option value="">--</option>
                 </select>
+                <div id="avatar_div" style="display: none">
+                    <img src="" />
+                </div>
                 <div id="chart_div" style="display: none">
                 </div>
                 <div id="loading">
